# unified-integration-hub-144005-144014

./: DEVELOPER_NOTES.md  Makefile  Procfile  README.md  dev_start_backend.sh  requirements.txt  start.sh
.init/: .linter.sh  (+5 more)
unified_connector_backend/: .env.example  Makefile  Procfile  README.md  dev_start.sh  pyproject.toml  requirements.in  requirements.txt  run.sh  start.sh
unified_connector_backend/.init/: .init-build-cmd
unified_connector_backend/app/: __init__.py  asgi.py  generate_openapi.py  main.py  requirements.txt  server.py
unified_connector_backend/app/api/: models.py
unified_connector_backend/app/connectors/: base.py  confluence.py  jira.py  registry.py
unified_connector_backend/app/core/: config.py  errors.py  logging.py  mongodb.py  retry.py  security.py  settings.py  tenancy.py  token_store.py
unified_connector_backend/app/db/: mongo.py
unified_connector_backend/app/models/: connection.py
unified_connector_backend/app/repositories/: connections_repo.py
unified_connector_backend/app/routers/: connectors.py  connectors_router.py  docs.py
unified_connector_backend/app/security/: crypto.py
unified_connector_backend/app/utils/: errors.py  openapi.py
unified_connector_backend/interfaces/: openapi.json  requirements.txt
unified_connector_backend/interfaces/app/: __init__.py  server.py
unified_connector_backend/src/: requirements.txt  sitecustomize.py
unified_connector_backend/src/api/: generate_openapi.py  main.py
unified_connector_backend/tests/: test_oauth_callback.py  test_registry_and_mapping.py  test_registry_and_routes.py
(+154 files in other folders)
